--- a/.env
+++ b/.env
@@ -36,7 +36,7 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
-MAIL_USERNAME=pasankavinga@gmail.com
+MAIL_USERNAME=pasankavinga@gmail.comfdghjk
 MAIL_PASSWORD=danzka1994
 MAIL_ENCRYPTION=ssl
 
